zerocopy-derive/tests/ui/privacy.msrv.stderr
error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:106:9
    |
106 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:113:9
    |
113 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:122:9
    |
122 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:129:9
    |
129 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:136:52
    |
136 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
    |                                                    ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:140:52
    |
140 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type =
    |                                                    ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:146:51
    |
146 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:149:51
    |
149 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:153:51
    |
153 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:32:13
   |
32 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:38:13
   |
38 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:51:13
   |
51 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:57:13
   |
57 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:71:56
   |
71 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:73:56
   |
73 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:86:55
   |
86 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:88:55
   |
88 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type = 0u16;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:91:55
   |
91 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0747`.
